# SSC0142-Sockets

./: .gitignore  CMakeLists.txt  README.md
Module 1/src/client/: worker.cpp
Module 1/src/common/: error.cpp  error.h  worker.h
Module 1/src/server/: server.cpp  worker.cpp  worker.h
Module 2/src/common/: network.cpp
Module 2/src/server/: worker.cpp
Module 3/: Makefile
Module 3-Extra/: .gitignore
Module 3-Extra/src/client/: worker.h
Module 3-Extra/src/server/: worker.h
Module 3/src/common/: error.cpp  network.h
src/client/: client.cpp  worker.cpp  worker.h
src/client-old/: client.cpp
src/common/: config.cpp  config.h  error.h  network.cpp  network.h  worker.cpp
src/server/: server.cpp  worker.cpp  worker.h
